# OpenCLDemo

./: CMakeLists.txt  Makefile  README.md
res/: vector_pythagoras_kernel.cl
src/: common.h  main.c  open_cl_computing.c  open_cl_computing.h  util.c  util.h
